# Physical-AI-Humanoid-Robotics-Book

./: .gitignore  0001-Feature-Complete-branding-and-UI-enhancement-for-Phy.patch  PROJECT_SUMMARY.md  QWEN.md  README.md  SETUP_README.md  create-placeholders.js  create_package.sh  debug-parsing.js  docusaurus.config.js  docusaurus.config.ts  fix-empty-keywords.js  fix-frontmatter-simple.js  install_dependencies.sh  package-lock.json  package.json  ros2_installation_guide.sh  setup_workspace.sh  sidebars.js  sidebars.ts  test-yaml-parsing.js  vercel.json
backups/: chapter-4.md  index.md
docs/: frontmatter-specification.md.temp  intro.md
docs/backups/: image-handling.md.backup  intro.md.backup
docs/module-1-ros2/: chapter-1.md  chapter-2.md  chapter-3.md  index.md
docusaurus/: docusaurus.config.js  sidebars.js
humanoid_robot_control/: package.xml
my-book/: README.md  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.js  sidebars.ts
scripts/: backup-util.js  enhanced-frontmatter-fixer.js  repair-front-matter.js  repair-sidebar-ids.js  validate-alt-text.js  validate-front-matter.js  validate-images.js
src/: final_student_guide.md  quickstart.md
src/services_actions_tutorial/: package.xml  setup.py
src/services_actions_tutorial/ros2_fundamentals/: __init__.py  add_two_ints_client.py  add_two_ints_server.py  fibonacci_action_client.py  fibonacci_action_server.py
src/services_actions_tutorial/test/: test_copyright.py  test_services.py
student-materials/: README.md
vla_system/: package.xml  setup.py
(+432 files in other folders)
